style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');

body {
    background-color: rgb(94, 94, 94);
    color: white;
    margin: 0px;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

main {
    font-family: "Roboto Condensed", Arial;
}

.banner {
    text-align: center;
    background-color: lightblue;
    font-weight: bold;
    color: black;
    font-size: 50px;
    margin-top: 0px;
    margin-bottom: 0px;
}

.navigation {
    ul {
        list-style-type: none;
        background-color: white;
        margin: 0px;
        padding: 0px;
        float: left;
        overflow: hidden;
        width: 100%;
        display: flex;
        justify-content: space-around;
    }

    a {
        text-decoration: none;
        padding: 10px;
        display: block;
        text-align: center;
        color: black;
    }

    a:hover {
        background-color: plum;
    }

    li {
        float: left;
    }
}

.map {
    width: 100%;  
    max-width: 500px;  
    height: auto; 
    display: block;  
    margin: 0 auto;
    border-radius: 15px;
}

@media only screen and (min-width: 800px) {
    .left-column {
        float: left;
        width: 70%;
    }

    .right-column {
        float: right;
        width: 30%;
    }
}
    


br {
    margin-top: 5px;
}

p {
    padding: 5px 10px 5px 10px;
}

footer {
    background-color: black;
    color: white;
    width: 100%;
    padding-bottom: 1px;
    margin-top: auto;
    font: Arial;
}

